# ETL-API

./: Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
.github/workflows/: check_code_coverage.py  codecoverage-on-pr.yaml  test-on-pr.yaml
etl_api/: __init__.py  app.py  base.py  main.py
etl_api/extractor/: __init__.py  base.py  request.py  yahoofinance.py
etl_api/loader/: __init__.py  base.py  ftp.py  return_request.py
etl_api/transformer/: __init__.py  base.py  csv_to.py  dataframe_to.py  dict_to.py
tests/: test_etl_api.py  test_extractor.py  test_loader.py  test_transformer.py
