[tool.poetry]
name = "ETL-API"
version = "0.1.0"
description = ""
authors = ["Victor Mas Montserrat <victormasmon@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
yfinance = "^0.2.41"
pandas = "^2.2.2"
Flask = "^3.0.3"

[tool.poetry.dev-dependencies]
pytest = "^8.3.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
